appId: com.ehdrbdndns.ourprayerwesdlmg8pomqcxfrwnqcj
---
- tapOn:
    text: ".*나중에.*"
    optional: true

- tapOn:
    text: ".*Go home.*"
    optional: true

- tapOn:
    text: ".*http://localhost:[0-9]+.*"
    optional: true

- waitForAnimationToEnd:
    timeout: 20000

- tapOn:
    point: "50%,90%"

- waitForAnimationToEnd:
    timeout: 20000
